<resources>
    <string name="app_name">Teams</string>
    <string name="MsgNatTeams">National Teams</string>
    <string name="MsgSriLanka">Sri Lanka</string>
    <string name="MsgAustralia">Australia</string>
    <string name="MsgNewZealand">New Zealand</string>
    <string name="MsgIndia">India</string>

    <string name="MsgSriLankanTeam">Sri Lanka National Team</string>
    <string name="Msgcaptain">Captain :-</string>
    <string name="Msgdimuth">Dimuth Karunaratne (Batsman)</string>
    <string name="MsgMalinga">Lasith Malinga (Bowler)</string>
    <string name="MsgMathews">Anjelo Mathews (All - rounder)</string>
    <string name="MsgThisara">Thisara Perera (All - rounder)</string>
    <string name="MsgKusalMendis">Kusal Mendis (Wicket - Keeper)</string>
    <string name="MsgAvishka">Avishka Fernando (Batsman)</string>
    <string name="MsgLahiru">Lahiru Thirimanna (Batsman)</string>
    <string name="MsgSurangaLakmal">Suranga Lakmal (Bowler)</string>
    <string name="MsgIsuru">Isuru Udana (All-rounder)</string>
    <string name="MsgDananjaya">Dananjaya De Silva (All - rounder)</string>
    <string name="MsgJeevan">Jeevan Mendis (All - rounder)</string>
    <string name="MsgAddNewPlayer">Add New Player</string>
    <string name="MsgAddNewTeam">Add New Team</string>
    <string name="MsgTeamName">Team Name :</string>
    <string name="MsgTeamNameButton">xxxxxxxxxxxxx</string>
    <string name="MsgCategory">Category  :</string>
    <string name="MsgCategoryButton">xxxxxxxxxxxxx</string>
    <string name="MsgNoBatsman">No Of Batsman :</string>
    <string name="msgNoOfBowlers">No Of Bowlers :</string>
    <string name="MsgNoAllrouders">No Of All-rounders :</string>
    <string name="MsgWicketKeepers">No Of Wicket - Keepers :</string>
    <string name="MsgConfirm1">Confirm</string>
    <string name="BTEdit1">Edit</string>
    <string name="BTEdit2">Edit</string>
    <string name="BTEdit3">Edit</string>
    <string name="BTEdit4">Edit</string>
    <string name="MsgConfirm">Confirm</string>
    <string name="MsgUpdate">Update</string>
    <string name="MsgDelete">Delete</string>
    <string name="MsgAddCommentary">Add New Commentary</string>
    <string name="MsgOver">Over :</string>
    <string name="Msgover">Value</string>
    <string name="MsgRuns">No Of Runs/Wicket</string>
    <string name="MsgRunsBT">Value</string>
    <string name="MsgComment">Value</string>
    <string name="MsgComment1">Comment</string>
    <string name="MsgAddEnd">Add End Over</string>
    <string name="MsgTotRuns">Total Runs for Over</string>
    <string name="MsgTotRunsVal">Value</string>
    <string name="MsgWICKETSvAL">Wickets</string>
    <string name="MsgBTWickVal">Value</string>
    <string name="MsgTVcURBatsman">Current Batsman</string>
    <string name="MsgCurnBTBats">Value</string>
    <string name="MsgTotRunsNE">Total Runs Needed</string>
    <string name="MsgTotRunsNEE">Value</string>
    <string name="MsgBallsRem">Balls Remaining</string>
    <string name="MsgbtBallsRem">Value</string>
    <string name="MsgAddCom">Add</string>
    <string name="BTPedit1">Edit</string>
    <string name="strUser">User</string>
    <string name="strAdmin">Admin</string>
    <string name="MsgICC">ICC</string>
    <string name="MsgIPL">IPL</string>
    <string name="MsgNational">National</string>
    <string name="strNational">National</string>

</resources>